install correct ui-router lib update readme to be more clear added some spacing to personal schedule layout update reference url to built js asset.

--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -81,9 +81,15 @@
 .personal-schedule-list {
   border: 1px solid $grey;
   margin: 0;
-  padding: 0;
+  padding: 0 5px;
+  list-style: none;
 }
 
 .personal-schedule-list li {
   margin: 10px 0;
+}
+
+/* move to spacing scss */
+.mas {
+  margin: 10px;
 }
